--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.2",
+    "react-usestateref": "^1.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
